fix: add overflow hidden to body

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,6 +5,7 @@
 
 body {
   font-family: "Inter", "Arial", sans-serif;
+  overflow: hidden
 }
 
 @layer base {
